--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -79,6 +79,7 @@
                     class="absolute -top-1 -right-1 w-3 h-3 bg-green-500 rounded-full border-2 border-white animate-pulse"></span>
             </a>
             <app-action-button caption="Venues" routerLink="/venues"></app-action-button>
+            <app-action-button caption="Venues2" routerLink="/venues2"></app-action-button>
 
 
             <!-- Sign In/Sign Up Button -->
