added cool menu and claude sample homepage

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -80,6 +80,7 @@
             </a>
             <app-action-button caption="Venues" routerLink="/venues"></app-action-button>
             <app-action-button caption="Venues2" routerLink="/venues2"></app-action-button>
+            <app-action-button caption="Venues3" routerLink="/venues3"></app-action-button>
 
 
             <!-- Sign In/Sign Up Button -->
