added state service, router service, etc

--- a/src/app/layouts/directory-layout/directory-layout.component.html
+++ b/src/app/layouts/directory-layout/directory-layout.component.html
@@ -1,8 +1,12 @@
-<div class="py-10">
+<div class="bg-gray-50">
+
+    <div class="py-2"></div>
+    <div class="py-16">
 
     <app-expand-header></app-expand-header>
 
     <router-outlet></router-outlet>
+    </div>
 
     <footer class="bg-gray-900 py-12"><div class="container mx-auto px-4">
         <div class="flex flex-wrap justify-between -m-6">
