--- a/src/app/components/venue-list/venue-list.component.html
+++ b/src/app/components/venue-list/venue-list.component.html
@@ -1,4 +1,4 @@
-<section class="py-16 bg-gray-50">
+<section>
     <div class="container mx-auto px-4">
         <div class="venues-grid grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
 
