a ton of stuff; now adding tenant

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,1 @@
-<app-hero></app-hero>
-<app-features></app-features>
-<app-testimonials></app-testimonials>
-<app-pricing></app-pricing>
-<app-faq></app-faq>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur consequuntur illum impedit iste modi, mollitia obcaecati provident quia quod saepe, sapiente totam, veritatis voluptatibus! Dolorum explicabo laudantium magni perspiciatis quod?
