--- a/src/app/pages/venue-hub/dashboard/dashboard.component.html
+++ b/src/app/pages/venue-hub/dashboard/dashboard.component.html
@@ -6,9 +6,12 @@
 <!--        [venueLabel]="'Venues'">-->
 <!--</app-city-title-bar>-->
 
-<app-venue-filters></app-venue-filters>
+<app-search-bar></app-search-bar>
+<!--<app-venue-filters></app-venue-filters>-->
 
+<div class="mt-5">
 <app-venue-list [$venues]="$venues()"></app-venue-list>
+</div>
 
 <app-venues-dump></app-venues-dump>
 
