got leaflet map working!!

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
 @use 'styles/layouts';
 
 @import '@fortawesome/fontawesome-free/css/all.css';
-
+// @import '~leaflet/dist/leaflet.css';
 
 @theme {
   --radius: 0.65rem;
