some nice fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,9 @@
 
 @use 'styles/buttons';
 @use 'styles/cards';
+@use 'styles/grids';
 @use 'styles/layouts';
+@use 'styles/maps';
 
 @import '@fortawesome/fontawesome-free/css/all.css';
 // @import '~leaflet/dist/leaflet.css';
