--- a/src/styles/layouts.scss
+++ b/src/styles/layouts.scss
@@ -47,3 +47,18 @@
     margin-top: 8px;
   }
 }
+
+.logo-img {
+  height: 56px; /* Normal size */
+  width: auto;
+  transition: height 0.3s ease;
+  display: block;
+}
+
+.logo-img.logo-small {
+  height: 42px; /* Contracted size */
+}
+
+.logo-img.logo-large {
+  height: 74px;
+}
