adding seo and titles

--- a/src/app/layouts/directory-layout/directory-layout.component.html
+++ b/src/app/layouts/directory-layout/directory-layout.component.html
@@ -3,9 +3,11 @@
     <div class="py-2"></div>
     <div class="py-16">
 
-    <app-expand-header></app-expand-header>
+        <app-expand-header></app-expand-header>
 
-    <router-outlet></router-outlet>
+<!--        <app-breadcrumb></app-breadcrumb>-->
+
+        <router-outlet></router-outlet>
     </div>
 
     <app-footer></app-footer>
