updated Seo service to support tenant meta data and json-ld

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @use 'styles/grids';
 @use 'styles/layouts';
 @use 'styles/maps';
+@use 'styles/heros';
 
 @import '@fortawesome/fontawesome-free/css/all.css';
 // @import '~leaflet/dist/leaflet.css';
