--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -24,3 +24,6 @@
   @apply bg-green-600;
 }
 
+.button-quick-action {
+  @apply flex-1 flex items-center justify-center  gap-2 text-white py-3 px-4 rounded-lg transition-colors cursor-pointer;
+}
