--- a/src/styles/heros.scss
+++ b/src/styles/heros.scss
@@ -32,6 +32,16 @@
   margin-bottom: 3rem;
 }
 
+.hero-description {
+  font-size: 1.1rem;
+  color: rgba(255, 255, 255, 0.9);
+  margin-bottom: 2.5rem;
+  line-height: 1.6;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .hero-content {
   display: flex;
   align-items: center;
