--- a/src/app/admin/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/pages/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,24 @@
-<p>admin-dashboard works!</p>
+<!--<p>admin-dashboard works!</p>-->
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.
+<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.-->
 
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.
+<!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae delectus distinctio dolores id odit optio? Consequatur cupiditate dignissimos dolorem, excepturi hic placeat quaerat? Expedita iusto repellat tempore vel velit.-->
+
+<!--<app-side-nav-outer-toolbar title="This is the title">-->
+<!--  <router-outlet></router-outlet>-->
+<!--  <app-footer>-->
+<!--    All trademarks or registered trademarks are property of their respective owners.-->
+<!--  </app-footer>-->
+<!--</app-side-nav-outer-toolbar>-->
+
+
+<dx-drawer
+  template="template"
+  [height]="250"
+  [minSize]="37">
+  <div *dxTemplate="let data of 'template'">
+    <div style="width: 150px">Drawer content</div>
+  </div>
+  <div>View content</div>
+</dx-drawer>
