have my admin table working;  now time to add forms

--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -4,7 +4,7 @@
   </header>
 
   <main class="main-content">
-    <div class="content-wrapper">
+    <div class="content-wrapper p-5">
 
       <app-drawer>
         <app-sidebar-menu></app-sidebar-menu>
