--- a/src/styles/layouts.scss
+++ b/src/styles/layouts.scss
@@ -5,9 +5,9 @@
   display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-areas:
-  "header"
-  "main"
-  "footer";
+    "header"
+    "main"
+    "footer";
 }
 
 .header {
@@ -20,9 +20,12 @@
 .main-content {
   grid-area: main;
   background-color: #f8f9fa;
+  min-height: 0;
+  overflow: auto;
 }
 
 .content-wrapper {
+  min-height: 100%;
 }
 
 .footer {
@@ -42,28 +45,28 @@
   .footer {
     padding: 1rem;
   }
-
 }
 
 .logo-img {
-  height: 56px; /* Normal size */
+  height: 56px;
   width: auto;
   transition: height 0.3s ease;
   display: block;
 }
 
 .logo-img.logo-small {
-  height: 42px; /* Contracted size */
+  height: 42px;
 }
 
 .logo-img.logo-large {
   height: 74px;
 }
 
-.breadrumb {
-  @apply text-gray-500 hover:text-gray-700;
-}
-
 .drawer-content {
   margin-top: 76px;
+}
+
+.repeat-type {
+  overflow: hidden auto;
+  height: 400px;
 }
