added hasura-crud service and countries page and table

--- a/src/app/admin/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin/pages/admin-dashboard/admin-dashboard.component.scss
@@ -1,3 +1,9 @@
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
+}
+
 .admin-dashboard {
   padding: 2rem;
   max-width: 1200px;
