--- a/src/app/admin/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin/pages/admin-dashboard/admin-dashboard.component.scss
@@ -1,6 +1,6 @@
 a {
-  text-decoration: none;
-  color: inherit;
+  text-decoration: none !important;
+  color: inherit !important;
   cursor: pointer;
 }
 
