--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @use 'styles/layouts';
 @use 'styles/maps';
 @use 'styles/heros';
+@use 'styles/inputs';
 
 @import '@fortawesome/fontawesome-free/css/all.css';
 // @import '~leaflet/dist/leaflet.css';
