--- a/src/styles/layouts.scss
+++ b/src/styles/layouts.scss
@@ -79,3 +79,11 @@ a {
   overflow: hidden auto;
   height: 400px;
 }
+
+.edit-page {
+  // padding: 10px 240px;
+  margin-top: 40px !important;
+  margin-bottom: 40px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
