--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 @use 'styles/maps';
 @use 'styles/heros';
 @use 'styles/inputs';
+@use 'styles/dialogs';
 
 @import '@fortawesome/fontawesome-free/css/all.css';
 // @import '~leaflet/dist/leaflet.css';
